--- a/C# Web Basics/CustomSoftUniServer/SUS/Apps/MyFirstMvcApp/MyFirstMvcApp.csproj
+++ b/C# Web Basics/CustomSoftUniServer/SUS/Apps/MyFirstMvcApp/MyFirstMvcApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="wwroot\favicon.ico">
+    <None Update="wwwroot\favicon.ico">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
